Add game functionality in console
This commit creates the core tic tac toe game. The game winner
is announced through console and the player is prompted with a popup
to pick the location for their game piece.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
             <link rel="stylesheet" href="css/styles.css">
         </head>
         <body>
-
+            <!--Header shows name of game-->
+            <div class="header">
+                <div class="header-text">Tic Tac Toe</div>
+            </div>
+            <!--Sidebar shows rules-->
+            <div class="sidebar">
+                <ul class="sidebar-list">
+                    <li id="sidebar-list-title" class="sidebar-list-item">Rules</li>
+                    <li class="sidebar-list-item">placeholder</li>
+                    <li class="sidebar-list-item">placeholder</li>
+                    <li class="sidebar-list-item">placeholder</li>
+                </ul>
+            </div>
+            <!--Displays whose turn it is-->
+            <div class="turn-display">
+                <div class="turn-display-text">placeholder</div>
+            </div>
+            <!--Gameboard display-->
+            <div class="game-board">
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+                <div class="game-board-item"></div>
+            </div>
         </body>
         <script src="js/script.js"></script>
 </html>
